# Symphony-Agent-Fwk

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini
.github/workflows/: contract-tests.yml  publish-testpypi.yml
analysis/: core_capabilities.md  implementation_plan.md
applications/taxonomy_planner/: README.md  __init__.py  agents.py  analyze_traces.py  config.py  generate_compliance_taxonomies.py  generate_multiple.py  generate_multiple.sh  generate_taxonomy.py  generate_us_taxonomies.sh  llm_tracing_plugin.py  main.py  patterns.py  persistence.py  run_full_pipeline.py  run_pipeline.sh  search_tracing_plugin.py  test_enhanced_structure.py  test_symphony_integration.py  test_taxonomy_store.py  visualize_all.py  visualize_taxonomy.py
applications/taxonomy_planner/docs/: architecture.md  extending.md  index.md  template-refactoring.md  tracing.md  user_guide.md
applications/taxonomy_planner/output/: README.md
applications/taxonomy_planner/task-prompts/: compliance-areas.txt  compliance.txt  enhanced-metadata.txt  exploration.txt  explorer-agent.txt  legal.txt  planning-agent.txt  planning.txt
applications/taxonomy_planner/tests/: __init__.py  conftest.py  pytest.ini  simple_test_taxonomy_store.py  test_e2e_integration.py  test_exploration_pattern.py  test_integration.py  test_plan_processing.py  test_symphony_integration.py  test_taxonomy_store.py
applications/taxonomy_planner/tools/: __init__.py  compliance_tools.py  knowledge_base.py  legal_tools.py  search_tools.py
docs/: index.md  plugin_developer_guide.md  plugin_system.md  public_surface.md  state_management.md
docs/architecture/: api_design.md  components.md  execution_layer.md  memory_architecture.md  orchestration_layer.md  overview.md  persistence_layer.md
docs/tutorials/: full_implementation_guide.md  getting_started.md
examples/: agent_reflection.py  benchmarking.py  checkpoint_restore_example.py  comprehensive_tutorial.py  configurable_memory_agent_example.py  dag_workflow.py  domain_memory_agent_example.py  domain_strategies_example.py  enhanced_prompts.py  execution_example.py  goal_management.py  importance_assessment_example.py  knowledge_graph_memory.py  learning_patterns_example.py  litellm_integration.py  local_kg_memory.py  mcp_integration.py  memory_factory_example.py  memory_manager_example.py  minimal_dag.py  modular_architecture.py  multi_agent.py  orchestration_example.py  packaging_test.py  patterns_example.py  persistence_example.py  planning_agent.py  plugin_template.py  simple_agent.py  simple_agent_example.py  simple_workflow_example.py  simplified_api_example.py  state_management_example.py  strategic_memory_example.py  symphony_api_example.py  taxonomy_planner_example.py  tool_usage_patterns_example.py  tool_verification.py  vector_memory.py  workflow_state_management_example.py
examples/backup/: domain_strategies_example.py
packaging_plan/: 00_executive_summary.md  01_package_structure.md  02_dependency_management.md  03_api_design.md  04_documentation_system.md  05_testing_and_quality.md  06_distribution_and_release.md  07_extensibility.md  08_implementation_plan.md  09_plugin_integration.md  10_entry_points.md  README.md  cognitive_load_reduction.md  implementation_progress.md  next_steps.md  phase1_summary.md  simplified_implementation_plan.md
scripts/: check_api_stable.py  find_missing_decorators.py  run_integration_tests.py  test_externalized_prompts.py
symphony/: __init__.py  api.py  cli.py  simple_api.py
symphony.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
symphony/agents/: base.py  goals.py  kg_enhanced.py  local_kg_enhanced.py  planning.py  prompt_integration.py  reflection.py  tool_enhanced.py
symphony/builder/: __init__.py  agent_builder.py  task_builder.py  workflow_builder.py  workflow_step_builder.py
symphony/core/: __init__.py  agent_config.py  agent_factory.py  config.py  container.py  events.py  exceptions.py  factory.py  plugin.py  registry.py  task.py  task_manager.py
symphony/core/registry/: README.md  __init__.py  (+1 more)
symphony/environment/: base.py
symphony/execution/: README.md  __init__.py  enhanced_agent.py  router.py  workflow_tracker.py
symphony/facade/: __init__.py  agents.py  patterns.py  tasks.py  workflows.py
symphony/llm/: base.py  litellm_client.py
symphony/mcp/: base.py
symphony/memory/: __init__.py  base.py  domain_strategies.py  importance.py  kg_memory.py  local_kg_memory.py  memory_manager.py  strategy_factory.py  vector_memory.py
symphony/orchestration/: __init__.py  base.py  dag.py  engine.py  steps.py  templates.py  workflow_definition.py
symphony/patterns/: __init__.py  base.py  builder.py  facade.py  registry.py
symphony/persistence/: __init__.py  file_repository.py  memory_repository.py  repository.py
symphony/prompts/: enhanced_registry.py  registry.py  templates.py
symphony/tools/: base.py  verification.py
symphony/utils/: annotations.py  types.py
tests/: README.md  conftest.py  test_contract.py
tests/integration/: __init__.py  conftest.py  test_dag_workflow.py  test_domain_memory_strategies.py  test_execution_layer.py  test_kg_enhanced_agent.py  test_multi_agent_orchestration.py  test_orchestration_layer.py  test_patterns_integration.py
tests/unit/: test_agent_base.py  test_builder.py  test_core_agent_factory.py  test_core_config.py  test_core_container.py  test_core_events.py  test_core_factory.py  test_core_task_manager.py  test_execution_enhanced_agent.py  test_execution_router.py  test_execution_workflow_tracker.py  test_facade.py  test_kg_enhanced_agent.py  test_kg_memory.py  test_learning_patterns.py  test_local_kg_memory.py  test_memory_manager.py  test_orchestration_engine.py  test_orchestration_steps.py  test_orchestration_templates.py  test_orchestration_workflow_definition.py  test_patterns.py  test_persistence_file_repository.py  test_persistence_memory_repository.py  test_registry_backends.py  test_registry_execution.py  test_state_management.py  test_state_restoration.py  test_symphony_api.py  test_tool_usage_patterns.py
(+61 files in other folders)
