[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symphony"
version = "0.1.0"
description = "Next-Generation Agentic Framework"
readme = "README.md"
authors = [
    {name = "Symphony Team"}
]
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0.0",
    "tiktoken",
    "PyYAML",
    "mcp>=0.1.0",  # Model Context Protocol (MCP) official SDK
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "black",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic"]
cli = ["mcp[cli]"]  # MCP CLI tools for development

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]