[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symphony-core"
version = "0.1.0a0"
description = "Next-Generation Agentic Framework"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Symphony Team"}
]
requires-python = ">=3.9"
long_description_content_type = "text/markdown"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
urls = {
    "Homepage" = "https://github.com/arunmenon/Symphony-Agent-Fwk",
    "Bug Tracker" = "https://github.com/arunmenon/Symphony-Agent-Fwk/issues",
}
dependencies = [
    "pydantic>=2.0.0",
    "tiktoken",
    "PyYAML",
    "mcp>=0.1.0",  # Model Context Protocol (MCP) official SDK
    "litellm>=1.0.0",  # Unified interface for multiple LLM providers
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "mypy",
    "ruff",
    "black",
]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic"]
cli = ["mcp[cli]"]  # MCP CLI tools for development

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=symphony --cov-report=term-missing"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that might be slow",
    "memory: Tests related to memory components",
    "agents: Tests related to agent components",
    "kg: Tests related to knowledge graph components",
    "dag: Tests related to DAG workflows",
    "orchestration: Tests related to agent orchestration",
    "tools: Tests related to tools",
]